# python-sql-analytics-bootcamp

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
analytics_bootcamp/: __init__.py  config.py  dataset.py  duckdb_utils.py  tableau.py  utils.py
data/raw/: bw_sales_kpis.csv  cost_center_actuals.csv  hr_headcount.csv  materials_inventory.csv  sales_orders.csv
notebooks/0.0-assessment/: 0.1-assessment-python-pandas.ipynb  0.2-assessment-sql.ipynb  0.3-assessment-combined-challenge.ipynb
notebooks/1.0-week01-02/: 1.1-day-01.ipynb  1.10-day-10.ipynb  1.2-day-02.ipynb  1.3-day-03.ipynb  1.4-day-04.ipynb  1.5-day-05.ipynb  1.6-day-06.ipynb  1.7-day-07.ipynb  1.8-day-08.ipynb  1.9-day-09.ipynb
notebooks/2.0-week03-04/: 2.1-day-11.ipynb  2.10-day-20.ipynb  2.2-day-12.ipynb  2.3-day-13.ipynb  2.4-day-14.ipynb  2.5-day-15.ipynb  2.6-day-16.ipynb  2.7-day-17.ipynb  2.8-day-18.ipynb  2.9-day-19.ipynb
notebooks/3.0-week05-06/: 3.1-day-21.ipynb  3.10-day-30.ipynb  3.2-day-22.ipynb  3.3-day-23.ipynb  3.4-day-24.ipynb  3.5-day-25.ipynb  3.6-day-26.ipynb  3.7-day-27.ipynb  3.8-day-28.ipynb  3.9-day-29.ipynb
notebooks/4.0-week07-08/: 4.1-day-31.ipynb  4.10-day-40.ipynb  4.2-day-32.ipynb  4.3-day-33.ipynb  4.4-day-34.ipynb  4.5-day-35.ipynb  4.6-day-36.ipynb  4.7-day-37.ipynb  4.8-day-38.ipynb  4.9-day-39.ipynb
notebooks/5.0-databricks/: 5.1-sap-databricks-connection-patterns.ipynb  5.2-pandas-to-pyspark-translation.ipynb  (+1 more)
references/: pandas-cheatsheet.ipynb  pandas-cheatsheet.md
scripts/: generate_hyper_files.py
(+11 files in other folders)
