[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analytics-bootcamp"
version = "0.1.0"
description = "Python & SQL analytics curriculum with SAP-flavored datasets"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "jupyter>=1.0",
    "nbformat>=5.9",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "flake8>=7.0",
    "isort>=5.13",
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["analytics_bootcamp*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "data", "notebooks", "reports"]
